--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
-    "@heroui/button": "2.2.17",
-    "@heroui/code": "2.2.12",
-    "@heroui/input": "2.4.17",
-    "@heroui/kbd": "2.2.13",
-    "@heroui/link": "2.2.14",
-    "@heroui/listbox": "2.3.16",
+    "@heroui/button": "^2.2.17",
+    "@heroui/card": "^2.2.16",
+    "@heroui/dropdown": "^2.3.17",
+    "@heroui/form": "^2.1.16",
+    "@heroui/input": "^2.4.17",
+    "@heroui/link": "^2.2.14",
+    "@heroui/listbox": "^2.3.16",
+    "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.15",
-    "@heroui/snippet": "2.2.18",
+    "@heroui/select": "^2.4.17",
+    "@heroui/slider": "^2.4.14",
+    "@heroui/spinner": "^2.2.14",
     "@heroui/switch": "2.2.15",
     "@heroui/system": "2.4.13",
     "@heroui/theme": "2.4.13",
