--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroui/avatar": "^2.2.13",
+    "@heroui/breadcrumbs": "^2.2.13",
     "@heroui/button": "^2.2.17",
     "@heroui/card": "^2.2.16",
+    "@heroui/checkbox": "^2.3.16",
     "@heroui/dropdown": "^2.3.17",
     "@heroui/form": "^2.1.16",
     "@heroui/input": "^2.4.17",
