Added recipe creation at a basic level.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroui/autocomplete": "^2.3.20",
     "@heroui/avatar": "^2.2.13",
     "@heroui/breadcrumbs": "^2.2.13",
     "@heroui/button": "^2.2.17",
@@ -24,12 +25,14 @@
     "@heroui/listbox": "^2.3.16",
     "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.15",
+    "@heroui/number-input": "^2.0.7",
     "@heroui/select": "^2.4.17",
     "@heroui/slider": "^2.4.14",
     "@heroui/spinner": "^2.2.14",
     "@heroui/switch": "2.2.15",
     "@heroui/system": "2.4.13",
     "@heroui/theme": "2.4.13",
+    "@internationalized/date": "^3.8.0",
     "@react-aria/ssr": "3.9.7",
     "@react-aria/visually-hidden": "3.8.21",
     "clsx": "2.1.1",
